# lewm-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  glama.json  justfile  pyproject.toml  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: INSTALL.md  MCP.md  PAPER.md  PRD.md  README.md  UPSTREAM.md  WEBAPP.md
native/: .gitignore  Cargo.toml  build.ps1  tauri.conf.json
native/src/: main.rs
src/lewm_mcp/: __init__.py  __main__.py  config.py  server.py  transport.py  web.py
src/lewm_mcp/engine/: __init__.py  jobs.py  runner.py
src/lewm_mcp/skills/lewm-mcp/: SKILL.md
tests/: test_smoke.py
tools/: bootstrap_upstream.ps1  convert_hf_pusht_ckpt.py  download_pusht_assets.ps1  ingest_lewm_paper.ps1  smoke_import.py
webapp/: index.html  package.json  start.ps1  tsconfig.json  vite.config.ts
webapp/e2e/: fleet-audit.spec.ts
webapp/src/: App.tsx  index.css
