[project]
name = "lewm-mcp"
version = "0.2.1"
description = "FastMCP 3.2 server for LeWorldModel (LeWM): JEPA train/infer, planning hooks, agentic prep, fleet webapp"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.2,<4",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "structlog>=24.0.0",
]
[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio", "httpx"]
dev = ["ruff>=0.9.0", "mypy"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]
[tool.ruff.format]
quote-style = "double"
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
